--- a/docs/manpages/nmblookup.1
+++ b/docs/manpages/nmblookup.1
@@ -1,4 +1,4 @@
-.TH "nmblookup" "1" "23 Oct 1998" "Samba" "SAMBA" 
+.TH "nmblookup " "1" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 nmblookup \- NetBIOS over TCP/IP client used to lookup NetBIOS names
@@ -13,7 +13,7 @@ This program is part of the \fBSamba\fP suite\&.
 .PP 
 \fBnmblookup\fP is used to query NetBIOS names and map them to IP
 addresses in a network using NetBIOS over TCP/IP queries\&. The options
-allow the name queries to be directed at a particlar IP broadcast area
+allow the name queries to be directed at a particular IP broadcast area
 or to a particular machine\&. All queries are done over UDP\&.
 .PP 
 .SH "OPTIONS" 
@@ -33,13 +33,14 @@ rfc1002 for details\&.
 .IP 
 .IP "\fB-S\fP" 
 Once the name query has returned an IP address then do a
-node status query as well\&.
+node status query as well\&. A node status query returns the NetBIOS names 
+registered by a host\&.
 .IP 
 .IP "\fB-r\fP" 
 Try and bind to UDP port 137 to send and receive UDP
 datagrams\&. The reason for this option is a bug in Windows 95 where it
 ignores the source port of the requesting packet and only replies to
-UDP port 137\&. Unfortunately, on most UNIX systems root privillage is
+UDP port 137\&. Unfortunately, on most UNIX systems root privilage is
 needed to bind to this port, and in addition, if the
 \fBnmbd\fP daemon is running on this machine it also
 binds to this port\&.
@@ -84,12 +85,12 @@ level\fP parameter in the \fBsmb\&.conf
 .IP 
 .IP "\fB-s smb\&.conf\fP" 
 This parameter specifies the pathname to the
-Samba configuration file, smb\&.conf\&. This file controls all aspects of
-the Samba setup on the machine and smbclient also needs to read this
-file\&.
+Samba configuration file, \fBsmb\&.conf\fP\&. 
+This file controls all aspects of
+the Samba setup on the machine\&.
 .IP 
 .IP "\fB-i scope\fP" 
-This specifies a NetBIOS scope that smbclient will use
+This specifies a NetBIOS scope that \fBnmblookup\fP will use
 to communicate with when generating NetBIOS names\&. For details on the
 use of NetBIOS scopes, see rfc1001\&.txt and rfc1002\&.txt\&. NetBIOS scopes
 are \fIvery\fP rarely used, only set this parameter if you are the
@@ -100,14 +101,15 @@ communicate with\&.
 This is the NetBIOS name being queried\&. Depending upon
 the previous options this may be a NetBIOS name or IP address\&. If a
 NetBIOS name then the different name types may be specified by
-appending \f(CW#<type>\fP to the name\&.
+appending \f(CW#<type>\fP to the name\&. This name may also be \f(CW"*"\fP,
+which will return all registered names within a broadcast area\&.
 .IP 
 .PP 
 .SH "EXAMPLES" 
 .PP 
-\fBnmblookup\fP can be used to query a WINS server (in the same way \&.B
-nslookup is used to query DNS servers)\&. To query a WINS server,
-nmblookup must be called like this:
+\fBnmblookup\fP can be used to query a WINS server (in the same way
+\fBnslookup\fP is used to query DNS servers)\&. To query a WINS server,
+\fBnmblookup\fP must be called like this:
 .PP 
 \f(CWnmblookup -U server -R \'name\'\fP
 .PP 
@@ -130,7 +132,7 @@ This man page is correct for version 2\&.0 of the Samba suite\&.
 .SH "AUTHOR" 
 .PP 
 The original Samba software and related utilities were created by
-Andrew Tridgell (samba-bugs@samba\&.anu\&.edu\&.au)\&. Samba is now developed
+Andrew Tridgell \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&. Samba is now developed
 by the Samba Team as an Open Source project similar to the way the
 Linux kernel is developed\&.
 .PP 
