--- a/docs/manpages/smbmount.8
+++ b/docs/manpages/smbmount.8
@@ -1,4 +1,4 @@
-.TH SMBMOUNT 8 "09 Oct 1998" "smbmount 2.0.0-alpha11"
+.TH SMBMOUNT 8 "13 Nov 1998" "smbmount 2.0.0-beta1"
 .SH NAME
 smbmount \- mount smb file system
 .SH SYNOPSIS
