--- a/docs/manpages/testparm.1
+++ b/docs/manpages/testparm.1
@@ -1,4 +1,4 @@
-.TH "testparm" "1" "23 Oct 1998" "Samba" "SAMBA" 
+.TH "testparm " "1" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 testparm \- check an smb\&.conf configuration file for internal correctness
@@ -38,7 +38,7 @@ then testparm will examine the \fB"hosts
 allow"\fP and \fB"hosts
 deny"\fP parameters in the
 \fBsmb\&.conf\fP file to determine if the hostname
-with this IP address would be allowed acces to the
+with this IP address would be allowed access to the
 \fBsmbd\fP server\&. If this parameter is supplied, the
 hostIP parameter must also be supplied\&.
 .IP 
