--- a/docs/manpages/make_smbcodepage.1
+++ b/docs/manpages/make_smbcodepage.1
@@ -1,4 +1,4 @@
-.TH "make_smbcodepage" "1" "23 Oct 1998" "Samba" "SAMBA" 
+.TH "make_smbcodepage " "1" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 make_codepage \- Construct a codepage file for Samba
@@ -18,17 +18,17 @@ with the internationalization features of Samba 2\&.0
 .PP 
 .IP 
 .IP "c|d" 
-This tells make_smbcodepage if it is compiling (c) a text
-format code page file to binary, or (d) de-compiling a binary codepage
+This tells \fBmake_smbcodepage\fP if it is compiling (\fBc\fP) a text
+format code page file to binary, or (\fBd\fP) de-compiling a binary codepage
 file to text\&.
 .IP 
 .IP "codepage" 
-This is the codepage we are processing (a number, eg\&. 850)\&.
+This is the codepage we are processing (a number, e\&.g\&. 850)\&.
 .IP 
 .IP "inputfile" 
-This is the input file to process\&. In the \'c\' case this
+This is the input file to process\&. In the \'\fBc\fP\' case this
 will be a text codepage definition file such as the ones found in the
-Samba \fIsource/codepages\fP directory\&. In the \'d\' case this will be the
+Samba \fIsource/codepages\fP directory\&. In the \'\fBd\fP\' case this will be the
 binary format codepage definition file normally found in the
 \fIlib/codepages\fP directory in the Samba install directory path\&.
 .IP 
@@ -42,9 +42,9 @@ A text Samba codepage definition file is a description that tells
 Samba how to map from upper to lower case for characters greater than
 ascii 127 in the specified DOS code page\&.  Note that for certain DOS
 codepages (437 for example) mapping from lower to upper case may be
-asynchronous\&. For example, in code page 437 lower case a acute maps to
-a plain upper case A when going from lower to upper case, but maps
-from plain upper case A to plain lower case a when lower casing a
+non-symmetrical\&. For example, in code page 437 lower case a acute maps to
+a plain upper case A when going from lower to upper case, but
+plain upper case A maps to plain lower case a when lower casing a
 character\&.
 .PP 
 A binary Samba codepage definition file is a binary representation of
