--- a/docs/manpages/nmbd.8
+++ b/docs/manpages/nmbd.8
@@ -22,21 +22,21 @@ SMB/CIFS clients, when they start up, may wish to locate an SMB/CIFS
 server\&. That is, they wish to know what IP number a specified host is
 using\&.
 .PP 
-Amongst other services, this program will listen for such requests,
+Amongst other services, \fBnmbd\fP will listen for such requests,
 and if its own NetBIOS name is specified it will respond with the IP
 number of the host it is running on\&.  Its "own NetBIOS name" is by
 default the primary DNS name of the host it is running on, but this
-can be overriden with the \fB-n\fP option (see \fIOPTIONS\fP below)\&. Thus
-nmbd will reply to broadcast queries for its own name(s)\&. Additional
-names for nmbd to respond on can be set via parameters in the
-\fBsmb\&.conf (5)\fP configuration file\&.
+can be overridden with the \fB-n\fP option (see OPTIONS below)\&. Thus
+\fBnmbd\fP will reply to broadcast queries for its own name(s)\&. Additional
+names for \fBnmbd\fP to respond on can be set via parameters in the
+\fBsmb\&.conf(5)\fP configuration file\&.
 .PP 
-nmbd can also be used as a WINS (Windows Internet Name Server)
+\fBnmbd\fP can also be used as a WINS (Windows Internet Name Server)
 server\&. What this basically means is that it will act as a WINS
 database server, creating a database from name registration requests
 that it receives and replying to queries from clients for these names\&.
 .PP 
-In addition, nmbd can act as a WINS proxy, relaying broadcast queries
+In addition, \fBnmbd\fP can act as a WINS proxy, relaying broadcast queries
 from clients that do not understand how to talk the WINS protocol to a
 WIN server\&.
 .PP 
@@ -44,9 +44,9 @@ WIN server\&.
 .PP 
 .IP 
 .IP "\fB-D\fP" 
-If specified, this parameter causes the server to operate
+If specified, this parameter causes \fBnmbd\fP to operate
 as a daemon\&. That is, it detaches itself and runs in the background,
-fielding requests on the appropriate port\&. By default, the server will
+fielding requests on the appropriate port\&. By default, \fBnmbd\fP will
 NOT operate as a daemon\&. nmbd can also be operated from the inetd
 meta-daemon, although this is not recommended\&.
 .IP 
@@ -64,16 +64,17 @@ NetBIOS lmhosts file\&.
 .IP 
 The lmhosts file is a list of NetBIOS names to IP addresses that is
 loaded by the nmbd server and used via the name resolution mechanism
-\fIname resolve order\fP described in \fBsmbd\&.conf (5)\fP to resolve any
+\fBname resolve order\fP described in 
+\fBsmb\&.conf (5)\fP to resolve any
 NetBIOS name queries needed by the server\&. Note that the contents of
-this file are \fINOT\fP used by nmbd to answer any name queries, adding
+this file are \fINOT\fP used by \fBnmbd\fP to answer any name queries\&. Adding
 a line to this file affects name NetBIOS resolution from this host
 \fIONLY\fP\&.
 .IP 
 The default path to this file is compiled into Samba as part of the
 build process\&. Common defaults are \fI/usr/local/samba/lib/lmhosts\fP,
-\fI/usr/samba/lib/lmhosts\fP or \fI/etc/lmhosts\fP\&. See the \fBlmhosts
-(5)\fP man page for details on the contents of this file\&.
+\fI/usr/samba/lib/lmhosts\fP or \fI/etc/lmhosts\fP\&. See the 
+\fBlmhosts (5)\fP man page for details on the contents of this file\&.
 .IP 
 .IP "\fB-d debuglevel\fP" 
 debuglevel is an integer from 0 to 10\&.
@@ -103,7 +104,7 @@ extension "\&.nmb" to the specified base name\&.  For example, if the name
 specified was "log" then the file log\&.nmb would contain the debugging
 data\&.
 .IP 
-The default log file path is is compiled into Samba as part of the
+The default log file path is compiled into Samba as part of the
 build process\&. Common defaults are \fI/usr/local/samba/var/log\&.nmb\fP,
 \fI/usr/samba/var/log\&.nmb\fP or \fI/var/log/log\&.nmb\fP\&.
 .IP 
@@ -118,7 +119,7 @@ but will override the setting in the \fBsmb\&.conf\fP file\&.
 UDP port number is a positive integer value\&.
 .IP 
 This option changes the default UDP port number (normally 137) that
-nmbd responds to name queries on\&. Don\'t use this option unless you are
+\fBnmbd\fP responds to name queries on\&. Don\'t use this option unless you are
 an expert, in which case you won\'t need help!
 .IP 
 .IP "\fB-s configuration file\fP" 
@@ -130,7 +131,7 @@ The file specified contains the configuration details required by the
 server\&. See \fBsmb\&.conf (5)\fP for more information\&.
 .IP 
 .IP "\fB-i scope\fP" 
-This specifies a NetBIOS scope that the server will use
+This specifies a NetBIOS scope that \fBnmbd\fP will use
 to communicate with when generating NetBIOS names\&. For details on the
 use of NetBIOS scopes, see rfc1001\&.txt and rfc1002\&.txt\&. NetBIOS scopes
 are \fIvery\fP rarely used, only set this parameter if you are the
@@ -138,7 +139,7 @@ system administrator in charge of all the NetBIOS systems you
 communicate with\&.
 .IP 
 .IP "\fB-h\fP" 
-Prints the help information (usage) for nmbd\&.
+Prints the help information (usage) for \fBnmbd\fP\&.
 .IP 
 .PP 
 .SH "FILES" 
@@ -150,14 +151,15 @@ contain suitable startup information for the meta-daemon\&.
 .PP 
 \fB/etc/rc\fP
 .PP 
-(or whatever initialisation script your system uses)\&.
+(or whatever initialization script your system uses)\&.
 .PP 
 If running the server as a daemon at startup, this file will need to
 contain an appropriate startup sequence for the server\&.
 .PP 
 \fB/usr/local/samba/lib/smb\&.conf\fP
 .PP 
-This is the default location of the \fIsmb\&.conf\fP server configuration
+This is the default location of the 
+\fBsmb\&.conf\fP server configuration
 file\&. Other common places that systems install this file are
 \fI/usr/samba/lib/smb\&.conf\fP and \fI/etc/smb\&.conf\fP\&.
 .PP 
@@ -173,18 +175,18 @@ configured under wherever Samba was configured to install itself\&.
 .PP 
 .SH "SIGNALS" 
 .PP 
-To shut down an nmbd process it is recommended that SIGKILL (-9)
+To shut down an \fBnmbd\fP process it is recommended that SIGKILL (-9)
 \fINOT\fP be used, except as a last resort, as this may leave the name
-database in an inconsistant state\&. The correct way to terminate
-nmbd is to send it a SIGTERM (-15) signal and wait for it to die on
+database in an inconsistent state\&. The correct way to terminate
+\fBnmbd\fP is to send it a SIGTERM (-15) signal and wait for it to die on
 its own\&.
 .PP 
-nmbd will accept SIGHUP, which will cause it to dump out it\'s
-namelists into the file namelist\&.debug in the
+\fBnmbd\fP will accept SIGHUP, which will cause it to dump out it\'s
+namelists into the file \f(CWnamelist\&.debug\fP in the
 \fI/usr/local/samba/var/locks\fP directory (or the \fIvar/locks\fP
 directory configured under wherever Samba was configured to install
-itself)\&. This will also cause nmbd to dump out it\'s server database in
-the log\&.nmb file\&. In addition, the the debug log level of nmbd may be raised
+itself)\&. This will also cause \fBnmbd\fP to dump out it\'s server database in
+the log\&.nmb file\&. In addition, the debug log level of nmbd may be raised
 by sending it a SIGUSR1 (\f(CWkill -USR1 <nmbd-pid>\fP) and lowered by sending it a
 SIGUSR2 (\f(CWkill -USR2 <nmbd-pid>\fP)\&. This is to allow transient
 problems to be diagnosed, whilst still running at a normally low log
@@ -207,7 +209,7 @@ http://samba\&.anu\&.edu\&.au/cifs/\&.
 .SH "AUTHOR" 
 .PP 
 The original Samba software and related utilities were created by
-Andrew Tridgell (samba-bugs@samba\&.anu\&.edu\&.au)\&. Samba is now developed
+Andrew Tridgell \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&. Samba is now developed
 by the Samba Team as an Open Source project similar to the way the
 Linux kernel is developed\&.
 .PP 
