--- a/docs/manpages/samba.7
+++ b/docs/manpages/samba.7
@@ -1,4 +1,4 @@
-.TH "Samba" "7" "23 Oct 1998" "Samba" "" 
+.TH "Samba " "7" "23 Oct 1998" "Samba" "" 
 .PP 
 .SH "NAME" 
 Samba \- A Windows SMB/CIFS fileserver for UNIX
@@ -9,7 +9,7 @@ Samba \- A Windows SMB/CIFS fileserver for UNIX
 .SH "DESCRIPTION" 
 .PP 
 The Samba software suite is a collection of programs that implements
-the Server Message Block(commenly abbreviated as SMB) protocol for
+the Server Message Block(commonly abbreviated as SMB) protocol for
 UNIX systems\&. This protocol is sometimes also referred to as the
 Common Internet File System (CIFS), LanManager or NetBIOS protocol\&.
 .PP 
@@ -19,7 +19,8 @@ The Samba suite is made up of several components\&. Each component is
 described in a separate manual page\&. It is strongly recommended that
 you read the documentation that comes with Samba and the manual pages
 of those components that you use\&. If the manual pages aren\'t clear
-enough then please send a patch to \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+enough then please send a patch or bug report
+to \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
 .PP 
 .IP 
 .IP "\fBsmbd\fP" 
@@ -67,8 +68,8 @@ in your printcap file\&.
 .br 
 .br 
 The \fBsmbstatus\fP
-(1) utility allows you to tell who is currently
-using the \fBsmbd (8)\fP server\&.
+(1) utility allows you list current connections to the 
+\fBsmbd (8)\fP server\&.
 .IP 
 .IP "\fBnmblookup\fP" 
 .br 
@@ -98,7 +99,7 @@ passwords on Samba and Windows NT(tm) servers\&.
 The Samba software suite is licensed under the GNU Public License
 (GPL)\&. A copy of that license should have come with the package in the
 file COPYING\&. You are encouraged to distribute copies of the Samba
-suite, but please keep obey the terms of this license\&.
+suite, but please obey the terms of this license\&.
 .PP 
 The latest version of the Samba suite can be obtained via anonymous
 ftp from samba\&.anu\&.edu\&.au in the directory pub/samba/\&. It is
@@ -128,7 +129,7 @@ for details on how to do this\&.
 If you have patches to submit or bugs to report then you may mail them
 directly to \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&. Note, however, that due to
 the enormous popularity of this package the Samba Team may take some
-time to repond to mail\&. We prefer patches in \fIdiff -u\fP format\&.
+time to respond to mail\&. We prefer patches in \fIdiff -u\fP format\&.
 .PP 
 .SH "CREDITS" 
 .PP 
@@ -141,7 +142,7 @@ for the contributors to Samba post-CVS\&. CVS is the Open Source source
 code control system used by the Samba Team to develop Samba\&. The
 project would have been unmanageable without it\&.
 .PP 
-In addition, several commercial organisations now help fund the Samba
+In addition, several commercial organizations now help fund the Samba
 Team with money and equipment\&. For details see the Samba Web pages at
 http://samba\&.anu\&.edu\&.au/samba/samba-thanks\&.html\&.
 .PP 
