--- a/docs/manpages/smbmnt.8
+++ b/docs/manpages/smbmnt.8
@@ -1,4 +1,4 @@
-.TH SMBMNT 8 "09 Oct 1998" "smbmnt 2.0.0-alpha11"
+.TH SMBMNT 8 "13 Nov 1998" "smbmnt 2.0.0-beta1"
 .SH NAME
 smbmnt \- mount smb file system
 .SH SYNOPSIS
