--- a/docs/manpages/smbumount.8
+++ b/docs/manpages/smbumount.8
@@ -1,4 +1,4 @@
-.TH SMBUMOUNT 8 "09 Oct 1998" "smbumount 2.0.0-alpha11"
+.TH SMBUMOUNT 8 "13 Nov 1998" "smbumount 2.0.0-beta1"
 .SH NAME
 smbumount \- umount for normal users
 .SH SYNOPSIS
