preparing for release of 2.0.0beta1

--- a/docs/manpages/lmhosts.5
+++ b/docs/manpages/lmhosts.5
@@ -1,4 +1,4 @@
-.TH "lmhosts " "5" "23 Oct 1998" "Samba" "SAMBA" 
+.TH LMHOSTS 5 "14 Nov 1998" "lmhosts 2.0.0-beta1"
 .PP 
 .SH "NAME" 
 lmhosts \- The Samba NetBIOS hosts file
