--- a/docs/manpages/smbpasswd.5
+++ b/docs/manpages/smbpasswd.5
@@ -1,4 +1,4 @@
-.TH "smbpasswd " "5" "23 Oct 1998" "Samba" "SAMBA" 
+.TH SMBPASSWD 5 "14 Nov 1998" "smbpasswd 2.0.0-beta1"
 .PP 
 .SH "NAME" 
 smbpasswd \- The Samba encrypted password file
