--- a/docs/manpages/smbpasswd.8
+++ b/docs/manpages/smbpasswd.8
@@ -1,4 +1,4 @@
-.TH "smbpasswd " "8" "23 Oct 1998" "Samba" "SAMBA" 
+.TH SMBPASSWD 8 "14 Nov 1998" "smbpasswd 2.0.0-beta1"
 .PP 
 .SH "NAME" 
 smbpasswd \- change a users SMB password
