--- a/docs/manpages/smbtar.1
+++ b/docs/manpages/smbtar.1
@@ -1,4 +1,4 @@
-.TH "smbtar " "1" "23 Oct 1998" "Samba" "SAMBA" 
+.TH SMBTAR 1 "14 Nov 1998" "smbtar 2.0.0-beta1"
 .PP 
 .SH "NAME" 
 smbtar \- shell script for backing up SMB/CIFS shares directly to UNIX tape drives
