--- a/docs/manpages/testparm.1
+++ b/docs/manpages/testparm.1
@@ -1,4 +1,4 @@
-.TH "testparm " "1" "23 Oct 1998" "Samba" "SAMBA" 
+.TH TESTPARM 1 "14 Nov 1998" "testparm 2.0.0-beta1"
 .PP 
 .SH "NAME" 
 testparm \- check an smb\&.conf configuration file for internal correctness
